# infinite-self-attention

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
datasets/llm/: gsm8k.jsonl  humaneval.jsonl  mbpp.jsonl  speed_bench.jsonl  squad.jsonl  squad_v2.jsonl
examples/: custom_transformer.py  huggingface_llm.py  huggingface_vit.py  vit_torchvision.py
infsa/: __init__.py  attention.py  convert.py  core.py
tests/: test_infsa.py
tests/integration/: helpers.py  run_all.py  test_custom_transformer.py  test_detr.py  test_huggingface_vit.py  test_llama_llm.py  test_torchvision_vit.py
